<resources>
    <string name="app_name">FourSeasons</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@fourseasons.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_steps">Steps</string>
    <string name="menu_report">Statistics</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_camera">Damages</string>

    <string name="num_steps">0</string>
    <string name="goal">Goal: 10000</string>
    <string name="progress">0</string>
    <string name="steps">Steps</string>
    <string name="start_text">Start</string>
    <string name="stop_text">Stop</string>
    <string name="acc_sensor_not_available">Acc. sensor not available</string>
    <string name="step_detector_sensor_not_available">STEP_DETECTOR sensor not available</string>
    <string name="step_permission_denied">Step permission is denied </string>
    <string name="favorite">Favourite</string>
    <string name="content_description_favorite">Your favourites!</string>
    <string name="settings">Settings</string>
    <string name="content_description_search">You can find the settings here</string>
    <string name="daily_steps">Completed steps today:</string>
    <string name="zero">0</string>
    <string name="today">Today</string>
    <string name="get_all_steps">Get all steps</string>
    <string name="delete_all_steps">Delete all steps</string>
    <string name="share">Share</string>

    <string name="steps_inside_rooms">Steps inside rooms</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_room">Rooms</string>
    <string name="logout">Logout</string>
    <string name="room">Room</string>
    <string name="object">Object</string>
    <string name="priority">Priority</string>
    <string name="description">Description</string>
    <string name="steps_outside_rooms">Steps outside room</string>

</resources>