<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/group_1">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/footsteps_silhouette_variant_svgrepo_com"
            android:title="@string/menu_steps" />
        <item
            android:id="@+id/nav_room"
            android:icon="@drawable/baseline_bedroom_24"
            android:title="@string/menu_room" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/baseline_stacked_bar_chart_24"
            android:title="@string/menu_report" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/baseline_camera_24"
            android:title="@string/menu_camera" />

    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group_2">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_person_pin_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/logout" />

    </group>

</menu>